Display airlift capacity in the city dialog.

--- a/freeciv-web/src/main/webapp/webclient/city.hbs
+++ b/freeciv-web/src/main/webapp/webclient/city.hbs
@@ -40,6 +40,7 @@
 	  <tr><td>Pollution: </td><td id="city_pollution"></td></tr>
           <tr><td>Tech stolen: </td><td id="city_steal"></td></tr>
           <tr><td>Culture: </td><td id="city_culture"></td></tr>
+          <tr><td>Airlift: </td><td id="city_airlift"></td></tr>
   	  </table>
         </div>
       </div>
